# colorhash256

./: .travis-doc-conf.sh  .travis-doc-key.enc  .travis.yml  Cargo.toml  README.md
src/: colorhash256.rs
